# rustcraft

./: Cargo.toml  goal.txt  project end.txt
shaders/: default.frag  default.frag.spv  default.vert  default.vert.spv
src/: main.rs  ptr_wrapper.rs  timer.rs
src/engine/: buffer.rs  camera.rs  mod.rs  texture.rs  vertex.rs
src/vust/: buffer.rs  camera.rs  instance.rs  mod.rs  texture.rs  vertex.rs
src/world/: block.rs  chunk.rs  job.rs  mod.rs  multithread.rs
textures/: atlas.pixil
