[package]
name = "rustcraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.3"
glfw = { version = "0.52.0", features = ["vulkan", "ash"] }
glm = { version = "0.18.0", package = "nalgebra-glm" }
image = "0.24.7"
winapi = "0.3.9"
