[package]
name = "rustcraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.3"
glfw = { version = "0.54.0", features = ["vulkan", "ash"] }
glm = { version = "0.18.0", package = "nalgebra-glm" }
gpu-allocator = "0.25.0"
image = "0.24.7"
noise = "0.8.2"
paste = "1.0.14"
winapi = "0.3.9"
